--SQLPlus Query Metrics: Version 1.1--
Implemented variables to specify the runtime configuration for the docker application

Shell scripts:
	docker/src/sh_script_config/project_config.sh was added as a configuration file used in the prepare docker and build/deploy docker scripts

	docker/src/run_query_metrics.sh was updated to load the shell script configuration file and use the values defined in it.  Also updated to add a date/time suffix to the .csv export files from each query used to capture metrics

	Prepare docker scripts (updated to include shell script configuration file and implement the variable):
		deployment_scripts/prepare_docker_project.hybrid.sh
		deployment_scripts/prepare_docker_project.local.sh
		deployment_scripts/prepare_docker_project.remote.sh

	Build/Deploy docker scripts  (updated to include shell script configuration file and implement the variable):
		deployment_scripts/build_deploy_project.hybrid.sh
		deployment_scripts/build_deploy_project.local.sh
		deployment_scripts/build_deploy_project.remote.sh

SQLPlus scripts:
	docker/src/SQL/sqlplus_config/runtime_config.sql was added as a configuration file used in the query_metrics_export.sql file

	Calling scripts (updated to run the SQLPlus configuration file):
		docker/src/SQL/query_metrics_calling_script.hybrid.sql
		docker/src/SQL/query_metrics_calling_script.local.sql
		docker/src/SQL/query_metrics_calling_script.remote.sql

	docker/src/SQL/query_metrics_export.sql was updated to use the variable values instead of hard-coding them

docker/Dockerfile was updated to convert project_config.sh line endings to linux line endings

README.md was updated to reference the new configuration files to simplify the process

todo.txt was updated with items that were implemented or planned for implementation

--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,16 @@ X develop automation schedule (cron job) for executing the existing docker image
 
 
 X Implement TNSNames.ora for the docker container	
+
+
+X Specify V_DB_NAME in a configuration.sql file so the user doesn't have to change the calling script
+	They could also change the output file name so there doesn't need to separate calling scripts at all for the forked repositories
+
+X Change deployment scripts so they use variables instead (e.g. repository URL, deployment path, etc.)
+	X This way the configuration files change but the main scripts will be the same as the upstream repository)
+	
+	
+Elapsed time of the query
+	grant select any dictionary to LHP_INTL_BIO;
+	select SQL_TEXT, elapsed_time from v$sql where SQL_TEXT LIKE '%%';
+
