--SQLPlus Query Metrics: Version 1.2--
implemented a traceroute feature for the docker application to execute in a loop while the query metrics are being captured.

Documentation:
	README.md was updated with the updated standalone and forked repository implementation procedures
	todo.txt was updated with items that were implemented and notes about the attempts to extract the query execution time information
	docker/docker notes.txt was created with notes about the project

bash scripts:

	Deployment scripts (updated to reference the deployment configuration file - project_deploy_config.sh):
		deployment_scripts/build_deploy_project.hybrid.sh
		deployment_scripts/build_deploy_project.local.sh
		deployment_scripts/build_deploy_project.remote.sh

	Preparation scripts  (updated to reference the deployment configuration file - project_deploy_config.sh):
		deployment_scripts/prepare_docker_project.hybrid.sh
		deployment_scripts/prepare_docker_project.local.sh
		deployment_scripts/prepare_docker_project.remote.sh

	main script: docker/src/run_query_metrics.sh was moved into the scripts folder: docker/src/scripts/run_query_metrics.sh
	created new shell scripts for running the traceroute (docker/src/scripts/traceroute.sh) and for running the traceroute in a loop (docker/src/scripts/traceroute_loop.sh)

	bash script configuration files:
		docker/src/sh_script_config/project_config.sh was removed in favor of splitting into two configuration files
		docker/src/scripts/sh_script_config/project_deploy_config.sh was created to define the deployment variables
		docker/src/scripts/sh_script_config/project_runtime_config.sh was created to define the runtime variables

	Separated out the project scenario variables into a separate include file that is renamed depending on which scenario is being used
		docker/src/scripts/sh_script_config/project_scenario_config.hybrid.sh
		docker/src/scripts/sh_script_config/project_scenario_config.local.sh
		docker/src/scripts/sh_script_config/project

--- a/todo.txt
+++ b/todo.txt
@@ -15,4 +15,19 @@ X Change deployment scripts so they use variables instead (e.g. repository URL, 
 Elapsed time of the query
 	grant select any dictionary to LHP_INTL_BIO;
 	select SQL_TEXT, elapsed_time from v$sql where SQL_TEXT LIKE '%%';
+		https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/V-SQL.html
+		Elapsed database time (in microseconds) used by this cursor for parsing, executing, and fetching. If the cursor uses parallel execution, then ELAPSED_TIME is the cumulative time for the query coordinator, plus all parallel query slave processes.
+		- *Note: after I converted this number was larger than the timer (e.g. 53.8s for elapsed_time and 1.368 to download the .csv data)
 
+		AUTOTRACE didn't provide execution time
+		
+		SET TIMING ON didn't provide execution time
+
+	Tried using DBA_HIST_SQLSTAT to get CPU_TIME_TOTAL, ELAPSED_TIME_TOTAL from the query that was used to export the data in .csv format but sometimes it would return no rows or many rows for the same SQL_ID value
+		This was not a reliable way to get the execution time
+		Also, the _TOTAL columns are cumulative for each time the query was executed
+		_DELTA columns are just the difference between the last time the query was executed and this time the query was executed, it does not provide the total time the 
+		
+	Tried to use SQL Trace but it creates files on the server that need to be converted to human-readable values using a command line utility, this is not feasible for automated extraction of timing information
+
+X implement traceroute loop while the queries are executing
